# mobile_diplom

./: .env.bstack  .env.emulator  .gitignore  README.md  config.py  pyproject.toml
mobile_diplom/pages/: main_page.py  search_page.py  welcome_screen_page.py
mobile_diplom/utils/: path.py
tests/: conftest.py
tests/android_app/: test_main_page.py  test_search_page.py  test_welcome_screen.py
wikipedia_app_tests/pages/: search_page.py  welcome_screen_page.py
wikipedia_app_tests/utils/: attach.py  path.py
