[tool.poetry]
name = "hw-20"
version = "0.1.0"
description = ""
authors = ["KateVarg <katye9470@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selene = "^2.0.0rc9"
allure-pytest = "^2.13.5"
appium-python-client = "^4.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = """
        --alluredir=allure-results
        """
